# Qt_Smart_Home

./: CMakeLists.txt  System Arch.txt  main.cpp  mainwindow.cpp  mainwindow.ui  stylesheet.qss
Data/: automation_rules.json  command_queue.json  devices.json  energy_data.json  recent_commands.json  rooms_groups.json  system_config.json
src/automation/: Action.hpp  AutomationEngine.hpp  AutomationRule.hpp  AutomationStrategy.hpp  AwayModeStrategy.hpp  ComfortModeStrategy.hpp  Condition.hpp  EnergySavingStrategy.hpp  SleepModeStrategy.hpp  Trigger.hpp
src/commands/: Command.hpp  CommandQueue.hpp  DeviceCommand.hpp  GroupCommand.hpp  ScenarioCommand.hpp  SetBrightnessCommand.hpp  TurnOffCommand.hpp  TurnOnCommand.hpp
src/common/: CameraTypes.hpp  CommandStatus.hpp  DeviceType.hpp  DeviceTypes.hpp  EventType.hpp  EventTypes.hpp  GroupType.hpp  GroupTypes.hpp  IntegrationType.hpp  IntegrationTypes.hpp  LightTypes.hpp  LockTypes.hpp  Priority.hpp  SensorTypes.hpp  ThermostatTypes.hpp
src/core/: SystemSummary.cpp  SystemSummary.hpp  smartHomeController_Singelton.hpp  smartHomeFacade.hpp  systemStatus.hpp
src/devices/: Device.hpp  DoorLock.hpp  HalogenLight.hpp  LedLight.hpp  Light.hpp  MotionSensor.hpp  SecurityCamera.hpp  SmartThermostatA.hpp  SmartThermostatB.hpp  Thermostat.hpp  WiredCamera.hpp  WirelessCamera.hpp
src/devices/states/: DeviceState.hpp  DimmingState.hpp  OffState.hpp  OfflineState.hpp  OnState.hpp  TransitioningState.hpp
src/events/: AutomationObserver.hpp  DeviceObserver.hpp  Event.hpp  EventBus.hpp  Observer.hpp
src/factories/: DeviceFactory.hpp  GoogleNestFactory.hpp  LegacyDeviceFactory.hpp  PhilipsFactory.hpp  RingFactory.hpp
src/groups/: DeviceComponent.hpp  DeviceGroup.hpp  FloorGroup.hpp  FunctionalGroup.hpp  RoomGroup.hpp
src/integration/: DeviceIntegrator.hpp  LegacyDevice.hpp  LegacyDeviceAdapter.hpp  NativeIntegrator.hpp
src/management/: DeviceRegistry.hpp  GroupManager.hpp
